getting ready for jenkins